[package]
name = "led-blink"
version = "0.1.0"
authors = ["yamamo2shun1 <shunichi@made-in-yamamoto.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }

esp-idf-hal = { version = "0.40.1"}
esp-idf-svc = { version = "0.45.0"}
anyhow = "1.0.70"
ws2812-esp32-rmt-driver = "0.5.0"
smart-leds-trait = "0.2.1"
 
 


[build-dependencies]
embuild = "0.31.1"
