[package]
name = "hello_world"
version = "0.1.0"
authors = ["yamamo2shun1 <shunichi@made-in-yamamoto.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32s3-hal", version = "0.8.0" }
esp-backtrace = { version = "0.6.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.4.0", features = ["esp32s3"] }
